updated build.gradle.kts for no warining during test